add images and styles update

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Casoola Review 2026 > Art Deco Hotel Vibes | Bonus & Games</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.svg">
-    <link rel="preload" href="https://fonts.gstatic.com/s/firasanscondensed/v11/wEOsEADFm8hSaQTFG18FErVhsC9x-tarWU3IuMR0cg.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preconnect" href="https://casoola.com">
+    <link rel="preload" as="font" href="https://casoola.com/cfr/cf6fa57bdbf4547/p/03-02-2026-09-04-08-f4f631e2/new-spirit-regular.588f4cfb19a2da03.woff2" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="https://casoola.com/cfr/cf6fa57bdbf4547/p/03-02-2026-09-04-08-f4f631e2/new-spirit-semibold.a6e2a85aa36646cc.woff2" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="https://casoola.com/cfr/cf6fa57bdbf4547/p/03-02-2026-09-04-08-f4f631e2/new-spirit-bold.a008d22b94d1c38b.woff2" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="https://casoola.com/cfr/cf6fa57bdbf4547/p/03-02-2026-09-04-08-f4f631e2/proza-libre-regular.a66648bc86fea285.woff2" type="font/woff2" crossorigin>
+    <link rel="preload" as="font" href="https://casoola.com/cfr/cf6fa57bdbf4547/p/03-02-2026-09-04-08-f4f631e2/proza-libre-bold.e5a7606263f2806c.woff2" type="font/woff2" crossorigin>
     <link rel="preload" href="assets/css/style.css" as="style">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -74,7 +79,7 @@
                 <p class="hero-text__text">Imagine stepping into a whimsical, animated Grand Hotel where the bellboys offer free spins instead of luggage service, and the lobby is filled with thousands of slot machines. Casoola welcomes British players with a unique visual flair that blends cartoonish charm with high-end Art Deco aesthetics. Instead of a sterile interface, users are greeted by quirky characters—a smiling concierge, attentive waitstaff, and even a well-dressed chihuahua—creating an atmosphere of fun, VIP hospitality from the moment you land on the page.</p>
                 <div class="hero-text__cta">
                     <a href="{{link}}" class="button-image button-image--gold">
-                        <img src="assets/images/button.webp" alt="Join Now" class="button-image__img">
+                        <img src="assets/images/button-hero.webp" alt="Join Now" class="button-image__img">
                         <span class="button-image__text">Join Now</span>
                     </a>
                     <a href="{{link}}" class="button-image">
@@ -83,8 +88,8 @@
                     </a>
                 </div>
             </div>
-            <div style="text-align: center; margin-top: var(--spacing-xl);">
-                <a href="{{link}}" class="button-image">
+            <div style="text-align: center; margin-top: var(--spacing-xl); width: 100%; display: flex; justify-content: center;">
+                <a href="{{link}}" class="button-image button-image--red">
                     <img src="assets/images/button2.webp" alt="Visit Website" class="button-image__img">
                     <span class="button-image__text">Visit Website</span>
                 </a>
@@ -215,7 +220,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">House Rules (Terms & Conditions)</h3>
                     <p class="content-block__text">To ensure a pleasant stay for everyone, Casoola applies specific rules to these amenities. British players should review the fine print before claiming:</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Excluded Payment Methods:</strong> Deposits made via Skrill or Neteller are often ineligible for welcome offers.</li>
                         <li><strong>Wagering Deadlines:</strong> Players have 10 days to complete the rollover requirements for casino bonuses.</li>
                         <li><strong>Max Bet Limit:</strong> When playing with an active bonus, the maximum bet per spin is limited to £5 (or currency equivalent).</li>
@@ -390,12 +395,16 @@
                     <div class="game-card__title">Le Bandit</div>
                 </div>
                 <div class="game-card">
-                    <img src="assets/images/game8.webp" alt="Gates of Olympus 1000" loading="lazy" onerror="console.error('Failed to load game8.webp');">
+                    <img src="assets/images/5.webp" alt="Gates of Olympus 1000" loading="lazy">
                     <div class="game-card__title">Gates of Olympus 1000</div>
                 </div>
                 <div class="game-card">
-                    <img src="assets/images/game1.webp" alt="Green Chilli 2" loading="lazy" onerror="console.error('Failed to load game1.webp');">
+                    <img src="assets/images/6.webp" alt="Green Chilli 2" loading="lazy">
                     <div class="game-card__title">Green Chilli 2</div>
+                </div>
+                <div class="game-card">
+                    <img src="assets/images/7.webp" alt="Big Bass Bonanza" loading="lazy">
+                    <div class="game-card__title">Big Bass Bonanza</div>
                 </div>
             </div>
 
@@ -404,7 +413,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Reel Selection (Slots)</h3>
                     <p class="content-block__text">The slot collection caters to various tastes, from classic fruit machines to complex video slots with intricate storylines. British players can filter games by categories such as "Bonus Buys," "Megaways," and "Jackpots."</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Top Picks:</strong> <em>Book of Dead, Starburst, Sweet Bonanza, Le Bandit, Gates of Olympus 1000</em></li>
                         <li><strong>Mechanics:</strong> Players can find many <em>Hold & Win</em> titles (e.g., <em>Green Chilli 2</em>) and vast <em>Megaways</em> options (e.g., <em>Madame Destiny Megaways</em>).</li>
                         <li><strong>Jackpots:</strong> A dedicated section features games like <em>Major Millions</em> and the <em>Mega Fire Blaze</em> series, offering significant prize pools.</li>
@@ -417,7 +426,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Gold Saloon Live</h3>
                     <p class="content-block__text">For a VIP experience, guests can enter the <em>Gold Saloon</em>, which is Casoola's premium Live Casino section. This area is primarily powered by <em>Evolution</em> and <em>Pragmatic Play Live</em>, delivering crystal-clear streams and professional dealers.</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Roulette:</strong> Beyond standard European tables, there are multiplier variants like <em>Mega Fire Blaze Roulette, PowerUP Roulette</em>, and fast-paced <em>Speed Roulette</em>.</li>
                         <li><strong>Blackjack:</strong> High rollers can find seat availability at the <em>Gold Saloon VIP</em> tables, or play <em>Infinite Blackjack</em> where no waiting is required.</li>
                         <li><strong>Game Shows:</strong> The "entertainment" category includes immersive titles like <em>Crazy Time, Sweet Bonanza CandyLand</em>, and <em>Monopoly Live</em>.</li>
@@ -430,7 +439,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Table Service (RNG Games)</h3>
                     <p class="content-block__text">For a quieter atmosphere without a live dealer, the RNG table section offers a wide variety of card and dice games.</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Cards:</strong> Includes <em>Single Deck Blackjack, Multi-hand Blackjack, Baccarat</em>, and <em>Casino Hold'em</em>.</li>
                         <li><strong>Roulette:</strong> A solid selection of European, French, and American variants to suit strategic preferences.</li>
                         <li><strong>Video Poker:</strong> Classic titles such as <em>Jacks or Better</em> and <em>Deuces Wild</em> are available for strategy-focused players.</li>
@@ -448,7 +457,7 @@
             <div class="content-block content-block--bg-2" style="margin-top: var(--spacing-xl);">
                 <div class="content-block__overlay"></div>
                 <div class="content-block__inner">
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Market Variety:</strong> The platform covers thousands of events daily, ranging from the <em>Premier League</em> and <em>Champions League</em> to niche sports like <em>Snooker, Darts</em>, and <em>table tennis</em>.</li>
                         <li><strong>In-Play Betting:</strong> The "Live Betting" monitor allows punters to place wagers as the action unfolds, with odds updating in real-time.</li>
                         <li><strong>Bet Builder:</strong> This feature allows users to construct their own accumulators within a single match, combining markets like "Total Goals," "Player Cards," and "Corners."</li>
@@ -552,7 +561,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Extraction Protocols (Withdrawal Procedure)</h3>
                     <p class="content-block__text">Casoola enforces a structured check-out policy to comply with strict international AML regulations. Guests should note the following steps to ensure a smooth departure with their winnings:</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>1. Pending Window:</strong> The finance department reviews requests manually. Hours of operation are Monday to Friday, 6:00 AM – 5:00 PM GMT. The processing time can be up to <strong>3 business days</strong>.</li>
                         <li><strong>2. Turnover Rule:</strong> To discourage money laundering, all deposits must be wagered <strong>x1 (one time)</strong>. If a player attempts to withdraw without meeting this turnover, the casino reserves the right to charge a 10–15% fee.</li>
                         <li><strong>3. Verification (KYC):</strong> Before the first withdrawal is approved, standard documentation is required: a valid ID (Passport or Driving Licence) and a recent utility bill to prove residence.</li>
@@ -629,7 +638,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Mobile Experience</h3>
                     <p class="content-block__text">Casoola allows guests to carry the entire hotel experience in their pocket without the need to visit an App Store. The platform utilises <strong>Progressive Web App (PWA)</strong> technology, delivering a smooth, app-like experience directly through the browser.</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>iOS Installation:</strong> Open Safari → Tap 'Share' → Scroll to 'Add to Home Screen'.</li>
                         <li><strong>Android Installation:</strong> Open Chrome → Tap Menu (3 dots) → Select 'Install App' or 'Add to Home Screen'.</li>
                         <li><strong>Performance:</strong> The mobile version retains 100% of the game library, including heavy Live Casino streams. The interface is optimised for touch, with menus like "Spin Rally" and "Cashier" relocated for thumb access.</li>
@@ -649,7 +658,7 @@
                 <div class="content-block__inner">
                     <h3 class="content-block__title">Security & Licensing</h3>
                     <p class="content-block__text">Behind the cartoonish facade lies a serious security infrastructure. Casoola operates under an International Gaming Licence (Curacao), ensuring it adheres to global standards for fair play and data protection.</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Data Protection:</strong> The site employs advanced <strong>SSL encryption</strong> (TLS 1.3) to safeguard all data transmission between your device and the hotel servers.</li>
                         <li><strong>Game Fairness:</strong> All <strong>RNG</strong> games (Slots, Virtual Table Games) are certified by independent testing labs to ensure random outcomes.</li>
                         <li><strong>AML Compliance:</strong> The operator strictly follows the 5th <strong>AML Amendment</strong> regulations, which is why the verification checks are thorough and mandatory.</li>
@@ -701,7 +710,7 @@
                 <div class="content-block__inner">
                     <h2 class="content-block__title">Why Check into Casoola?</h2>
                     <p class="content-block__text">If you are still deciding whether to book a room, here are the top advantages of this establishment:</p>
-                    <ul style="color: var(--color-text); margin-left: var(--spacing-lg); margin-top: var(--spacing-md);">
+                    <ul style="color: var(--color-text); margin-left: auto; margin-right: auto; margin-top: var(--spacing-md); text-align: left; display: inline-block; max-width: 800px;">
                         <li><strong>Unique Theme:</strong> A high-quality visual style inspired by a whimsical Art Deco Grand Hotel, far more engaging than generic templates.</li>
                         <li><strong>Gamified Rewards:</strong> The "Shop", "Collections", and "Spin Rally" systems ensure that gameplay is rewarded with more than just potential winnings.</li>
                         <li><strong>Comprehensive Service:</strong> A seamless blend of thousands of casino games and a professional-grade sportsbook in one account.</li>
