--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="assets/images/search@2x.webp" alt="Search" class="header__search-icon">
                     </button>
                     <a href="{{link}}" class="button-image button-image--red header__btn header__btn--login" id="header-login">
-                        <img src="assets/images/button.webp" alt="LOGIN" class="button-image__img">
+                        <img src="assets/images/button2.webp" alt="LOGIN" class="button-image__img">
                         <span class="button-image__text">LOGIN</span>
                     </a>
                     <a href="{{link}}" class="button-image button-image--gold header__btn header__btn--register" id="header-register">
@@ -100,7 +100,7 @@
                 <p class="hero-text__text">Imagine stepping into a whimsical, animated Grand Hotel where the bellboys offer free spins instead of luggage service, and the lobby is filled with thousands of slot machines. Casoola welcomes British players with a unique visual flair that blends cartoonish charm with high-end Art Deco aesthetics. Instead of a sterile interface, users are greeted by quirky characters—a smiling concierge, attentive waitstaff, and even a well-dressed chihuahua—creating an atmosphere of fun, VIP hospitality from the moment you land on the page.</p>
                 <div class="hero-text__cta" style="justify-content: center;">
                     <a href="{{link}}" class="button-image button-image--red">
-                        <img src="assets/images/button.webp" alt="Visit Website" class="button-image__img">
+                        <img src="assets/images/button2.webp" alt="Visit Website" class="button-image__img">
                         <span class="button-image__text">Visit Website</span>
                     </a>
                 </div>
@@ -175,7 +175,7 @@
             </div>
             <div style="text-align: center; margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="View Full Details" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="View Full Details" class="button-image__img">
                     <span class="button-image__text">View Full Details</span>
                 </a>
             </div>
@@ -260,7 +260,7 @@
                     </p>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Claim Your Gift" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Claim Your Gift" class="button-image__img">
                             <span class="button-image__text">Claim Your Gift</span>
                         </a>
                     </div>
@@ -320,7 +320,7 @@
             </div>
             <div style="text-align: center; margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="Visit the Shop" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="Visit the Shop" class="button-image__img">
                     <span class="button-image__text">Visit the Shop</span>
                 </a>
             </div>
@@ -369,7 +369,7 @@
             </div>
             <div style="text-align: center; margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="Open Your Account" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="Open Your Account" class="button-image__img">
                     <span class="button-image__text">Open Your Account</span>
                 </a>
             </div>
@@ -465,7 +465,7 @@
 
             <div style="text-align: center; margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="Explore the Games" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="Explore the Games" class="button-image__img">
                     <span class="button-image__text">Explore the Games</span>
                 </a>
             </div>
@@ -491,7 +491,7 @@
             </div>
             <div style="text-align: center; margin-top: var(--spacing-xl); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="Place Your Bets" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="Place Your Bets" class="button-image__img">
                     <span class="button-image__text">Place Your Bets</span>
                 </a>
             </div>
@@ -587,7 +587,7 @@
             <p class="table-note" style="margin-top: var(--spacing-md);">*Processing time applies before release to the network.</p>
             <div style="text-align: center; margin-top: var(--spacing-lg); margin-bottom: var(--spacing-lg);">
                 <a href="{{link}}" class="button-image button-image--red">
-                    <img src="assets/images/button.webp" alt="Open Cashier" class="button-image__img">
+                    <img src="assets/images/button2.webp" alt="Open Cashier" class="button-image__img">
                     <span class="button-image__text">Open Cashier</span>
                 </a>
             </div>
@@ -655,7 +655,7 @@
                     </div>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Contact Us" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Contact Us" class="button-image__img">
                             <span class="button-image__text">Contact Us</span>
                         </a>
                     </div>
@@ -675,7 +675,7 @@
                     </ul>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Play on Mobile" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Play on Mobile" class="button-image__img">
                             <span class="button-image__text">Play on Mobile</span>
                         </a>
                     </div>
@@ -695,7 +695,7 @@
                     </ul>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Read Policy" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Read Policy" class="button-image__img">
                             <span class="button-image__text">Read Policy</span>
                         </a>
                     </div>
@@ -714,12 +714,12 @@
                     <p class="content-block__text">Here is what guests from Great Britain have written in the guestbook regarding their stay at Casoola.</p>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: var(--spacing-lg); margin-top: var(--spacing-xl);">
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
-                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md);">
-                                <div>
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700;">London_Slot_Spinner</h3>
+                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
+                                <div style="flex: 1; min-width: 0;">
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">London_Slot_Spinner</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Regular Guest</p>
                         </div>
-                                <div style="display: flex; align-items: center; gap: var(--spacing-xs); background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius);">
+                                <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
                                     <span style="color: var(--color-accent); font-weight: 700; font-size: 1rem;">4.5</span>
                                     <span style="color: var(--color-accent); font-size: 0.9rem;">/5</span>
                         </div>
@@ -728,12 +728,12 @@
                         </div>
                         
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
-                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md);">
-                        <div>
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700;">OddsFathers</h3>
+                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
+                        <div style="flex: 1; min-width: 0;">
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">OddsFathers</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Sports Enthusiast</p>
                         </div>
-                                <div style="display: flex; align-items: center; gap: var(--spacing-xs); background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius);">
+                                <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
                                     <span style="color: var(--color-accent); font-weight: 700; font-size: 1rem;">5.0</span>
                                     <span style="color: var(--color-accent); font-size: 0.9rem;">/5</span>
                                 </div>
@@ -742,12 +742,12 @@
                         </div>
                         
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
-                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md);">
-                                <div>
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700;">SarahG_90</h3>
+                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
+                                <div style="flex: 1; min-width: 0;">
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">SarahG_90</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Bonus Fan</p>
                                 </div>
-                                <div style="display: flex; align-items: center; gap: var(--spacing-xs); background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius);">
+                                <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
                                     <span style="color: var(--color-accent); font-weight: 700; font-size: 1rem;">4.0</span>
                                     <span style="color: var(--color-accent); font-size: 0.9rem;">/5</span>
                                 </div>
@@ -757,7 +757,7 @@
                     </div>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Join the Guests" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Join the Guests" class="button-image__img">
                             <span class="button-image__text">Join the Guests</span>
                         </a>
                     </div>
@@ -777,7 +777,7 @@
                     </ul>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Start Playing" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Start Playing" class="button-image__img">
                             <span class="button-image__text">Start Playing</span>
                         </a>
                     </div>
@@ -791,7 +791,7 @@
                     <p class="content-block__text">Casoola is committed to ensuring every guest's stay is safe and enjoyable. The "Responsible Gaming" policy provides tools to help manage control. Guests can contact support to set limits or request temporary "Cool-off" periods. For those needing a permanent break, Self-Exclusion is available. The site also enforces strict age verification (18+) and recommends filtration software like Net Nanny for parents. UK players are also encouraged to utilise external resources such as GamCare and Gambling Therapy if entertainment turns into a problem.</p>
                     <div style="text-align: center; margin-top: var(--spacing-lg);">
                         <a href="{{link}}" class="button-image button-image--red">
-                            <img src="assets/images/button.webp" alt="Safety Tools" class="button-image__img">
+                            <img src="assets/images/button2.webp" alt="Safety Tools" class="button-image__img">
                             <span class="button-image__text">Safety Tools</span>
                         </a>
                     </div>
