updates of texts

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="welcome-banner__subtitle">Grand Hotel Art Deco de los años 30</p>
                 <a href="{{link}}" class="welcome-banner__button button-image button-image--gold">
                     <img src="assets/images/button-hero.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
-                    <span class="button-image__text">Haced reserva de estancia en Casoola</span>
+                    <span class="button-image__text">HACED RESERVA DE ESTANCIA EN CASOOLA</span>
                 </a>
             </div>
         </div>
@@ -98,7 +98,7 @@
                 <div class="hero-text__cta" style="justify-content: center;">
                     <a href="{{link}}" class="button-image button-image--red">
                         <img src="assets/images/button2.webp" alt="Haced reserva de estancia en Casoola" class="button-image__img">
-                        <span class="button-image__text">Haced reserva de estancia en Casoola</span>
+                        <span class="button-image__text">HACED RESERVA DE ESTANCIA EN CASOOLA</span>
                     </a>
                 </div>
             </div>
@@ -728,7 +728,7 @@
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
                             <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
                                 <div style="flex: 1; min-width: 0;">
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Javi "SlotGamba"</h3>
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Javi "SlotGamba" (Calificación 4.5/5)</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Huésped Regular</p>
                         </div>
                                 <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
@@ -742,7 +742,7 @@
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
                             <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
                         <div style="flex: 1; min-width: 0;">
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Elena "LaSuertuda"</h3>
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Elena "LaSuertuda" (Calificación 4/5)</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Fan de Bonos</p>
                         </div>
                                 <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
@@ -756,7 +756,7 @@
                         <div style="background: rgba(42, 11, 14, 0.85); border: 2px solid rgba(255, 197, 6, 0.4); border-radius: var(--border-radius-lg); padding: var(--spacing-lg); text-align: left;">
                             <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: var(--spacing-md); gap: var(--spacing-sm);">
                                 <div style="flex: 1; min-width: 0;">
-                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Sergio "Rematador"</h3>
+                                    <h3 style="color: var(--color-accent); font-size: 1.1rem; margin-bottom: var(--spacing-xs); font-weight: 700; word-wrap: break-word; overflow-wrap: break-word;">Sergio "Rematador" (Calificación 5/5)</h3>
                                     <p style="color: #FFF9E6; font-size: 0.85rem; margin: 0; opacity: 0.8;">Aficionado al Deporte</p>
                                 </div>
                                 <div style="display: flex; align-items: center; gap: 0; background: rgba(255, 197, 6, 0.2); padding: var(--spacing-xs) var(--spacing-sm); border-radius: var(--border-radius); flex-shrink: 0;">
